Support to build on QT5.8

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,7 +105,7 @@ FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5WinExtras REQUIRED)
 QT5_WRAP_UI(uibase_UIHDRS ${UIS})
 
-INCLUDE_DIRECTORIES(${Qt5Declarative_INCLUDES})
+INCLUDE_DIRECTORIES(${Qt5quick_INCLUDES})
 
 SET(Boost_USE_STATIC_LIBS        ON)
 SET(Boost_USE_MULTITHREADED      ON)
@@ -116,7 +116,7 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 ADD_DEFINITIONS(-DUIBASE_EXPORT)
 
 ADD_LIBRARY(uibase SHARED ${uibase_HDRS} ${uibase_SRCS} ${uibase_UIHDRS} ${UIS} ${RSCS} ${TRS} ${MOCS})
-TARGET_LINK_LIBRARIES(uibase Qt5::Widgets Qt5::WinExtras ${Boost_LIBRARIES})
+TARGET_LINK_LIBRARIES(uibase Qt5::Widgets Qt5::WinExtras  Qt5::QuickWidgets Qt5::Quick Qt5::Qml ${Boost_LIBRARIES})
 
 IF(MSVC)
   SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES LINK_FLAGS "/LARGEADDRESSAWARE")
@@ -131,7 +131,7 @@ IF (NOT "${OPTIMIZE_LINK_FLAGS}" STREQUAL "")
   SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES LINK_FLAGS_RELWITHDEBINFO ${OPTIMIZE_LINK_FLAGS})
 ENDIF()
 
-QT5_USE_MODULES(uibase Widgets Declarative)
+QT5_USE_MODULES(uibase Widgets Quick Script Qml QuickWidgets)
 
 ###############
 ## Installation
